--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -14,8 +14,64 @@ permissions:
   pull-requests: write
 
 jobs:
-  storybook:
+  #
+  # 🚀 1. DEPLOY STORYBOOK ON MASTER (Bitovi - unchanged)
+  #
+  deploy-master:
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
+
+    concurrency:
+      group: storybook-master
+      cancel-in-progress: true
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "24"
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: "1.3.1"
+
+      - name: Cache Bun dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.bun/install/cache
+            node_modules
+          key: ${{ runner.os }}-bun-${{ hashFiles('bun.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-bun-
+
+      - name: Install dependencies
+        run: bun install --frozen-lockfile --ignore-scripts
+
+      - name: Build Storybook
+        run: bun run build-storybook
+
+      - name: Deploy to GitHub Pages (master)
+        uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
+        with:
+          path: storybook-static
+          checkout: false
+          install_command: ""
+
+  #
+  # 🧪 2. DEPLOY PR PREVIEW (/pr-xxx/)
+  #
+  deploy-preview:
+    if: github.event_name == 'pull_request' && github.event.action != 'closed'
+    runs-on: ubuntu-latest
+
+    concurrency:
+      group: pr-${{ github.event.pull_request.number }}
+      cancel-in-progress: true
 
     steps:
       - name: Checkout repository
@@ -39,35 +95,36 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile --ignore-scripts
 
-      # --- Build Storybook unless closing PR ---
       - name: Build Storybook
-        if: github.event.action != 'closed'
         run: bun run build-storybook
 
-      # --- Determine deployment target folder ---
-      - name: Set deploy path
-        id: path
-        run: |
-          if [[ "${{ github.event_name }}" == "pull_request" && "${{ github.event.action }}" != "closed" ]]; then
-            echo "folder=pr-${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
-          else
-            echo "folder=." >> $GITHUB_OUTPUT
-          fi
-
-      # --- Publish (master or PR) ---
-      - name: Deploy Storybook
-        if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
+      - name: Deploy Preview to /pr-xxx/
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: storybook-static
-          destination_dir: ${{ steps.path.outputs.folder }}
+          destination_dir: pr-${{ github.event.pull_request.number }}
           keep_files: true
-          cname: storybook.tracktor.fr
 
-      # --- Auto-remove PR Preview on PR Close ---
-      - name: Delete PR preview
-        if: github.event_name == 'pull_request' && github.event.action == 'closed'
+      - name: Comment PR with Storybook Preview URL
+        uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          recreate: true
+          header: storybook_preview
+          message: |
+            🚀 **Storybook Preview Ready**
+            🔗 https://storybook.tracktor.fr/pr-${{ github.event.pull_request.number }}/
+
+  #
+  # 🧹 3. CLEANUP PREVIEW ON PR CLOSE
+  #
+  cleanup-preview:
+    if: github.event_name == 'pull_request' && github.event.action == 'closed'
+    runs-on: ubuntu-latest
+
+    # ❗ Pas de concurrency ici — sinon cleanup peut être annulé
+    steps:
+      - name: Delete PR preview from gh-pages
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
@@ -80,17 +137,3 @@ jobs:
           git add .
           git commit -m "Cleanup preview for PR #${{ github.event.pull_request.number }}" || echo "Nothing to commit"
           git push
-
-      # --- Comment on PR with Preview URL ---
-      - name: Comment PR with Storybook URL
-        if: github.event_name == 'pull_request' && github.event.action != 'closed'
-        uses: marocchino/sticky-pull-request-comment@v2
-        with:
-          recreate: true
-          header: storybook_preview
-          message: |
-            🚀 **Storybook Preview Ready**
-
-            🔗 https://storybook.tracktor.fr/pr-${{ github.event.pull_request.number }}/
-
-            _(This link updates automatically on each commit)_
