--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -1,29 +1,22 @@
-name: Storybook Deployment
+name: Deploy Storybook
 
 on:
   push:
     branches:
       - master
-  pull_request:
-    types: [opened, reopened, synchronize, closed]
 
 permissions:
-  contents: write
+  contents: read
   pages: write
   id-token: write
-  pull-requests: write
 
 jobs:
-  #
-  # 🚀 1. DEPLOY STORYBOOK ON MASTER (Bitovi - unchanged)
-  #
-  deploy-master:
-    if: github.event_name == 'push'
+  deploy:
     runs-on: ubuntu-latest
 
-    concurrency:
-      group: storybook-master
-      cancel-in-progress: true
+    environment:
+      name: Storybook
+      url: https://storybook.tracktor.fr
 
     steps:
       - name: Checkout repository
@@ -55,85 +48,9 @@ jobs:
       - name: Build Storybook
         run: bun run build-storybook
 
-      - name: Deploy to GitHub Pages (master)
+      - name: Deploy to GitHub Pages
         uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
         with:
           path: storybook-static
           checkout: false
           install_command: ""
-
-  #
-  # 🧪 2. DEPLOY PR PREVIEW (/pr-xxx/)
-  #
-  deploy-preview:
-    if: github.event_name == 'pull_request' && github.event.action != 'closed'
-    runs-on: ubuntu-latest
-
-    concurrency:
-      group: pr-${{ github.event.pull_request.number }}
-      cancel-in-progress: true
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: "1.3.1"
-
-      - name: Cache Bun dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.bun/install/cache
-            node_modules
-          key: ${{ runner.os }}-bun-${{ hashFiles('bun.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-bun-
-
-      - name: Install dependencies
-        run: bun install --frozen-lockfile --ignore-scripts
-
-      - name: Build Storybook (PR Preview)
-        run: bun run build-storybook-preview
-
-      - name: Deploy Preview to /pr-xxx/
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: storybook-static
-          destination_dir: pr-${{ github.event.pull_request.number }}
-          keep_files: true
-
-      - name: Comment PR with Storybook Preview URL
-        uses: marocchino/sticky-pull-request-comment@v2
-        with:
-          recreate: true
-          header: storybook_preview
-          message: |
-            🚀 **Storybook Preview Ready**
-            🔗 https://storybook.tracktor.fr/pr-${{ github.event.pull_request.number }}/
-
-  #
-  # 🧹 3. CLEANUP PREVIEW ON PR CLOSE
-  #
-  cleanup-preview:
-    if: github.event_name == 'pull_request' && github.event.action == 'closed'
-    runs-on: ubuntu-latest
-
-    # ❗ Pas de concurrency ici — sinon cleanup peut être annulé
-    steps:
-      - name: Delete PR preview from gh-pages
-        run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
-
-          git clone --depth=1 --branch=gh-pages https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} gh-pages
-          cd gh-pages
-
-          rm -rf pr-${{ github.event.pull_request.number }}
-
-          git add .
-          git commit -m "Cleanup preview for PR #${{ github.event.pull_request.number }}" || echo "Nothing to commit"
-          git push
