--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,12 +12,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - name: Install Bun
-        uses: oven-sh/setup-bun@v1
+      - uses: oven-sh/setup-bun@v1
 
-      - name: Cache Bun dependencies
-        uses: actions/cache@v4
+      - uses: actions/cache@v4
         with:
           path: |
             ~/.bun/install/cache
@@ -35,18 +35,19 @@ jobs:
       - name: Run unit tests
         run: bun run test
 
+
   chromatic:
     runs-on: ubuntu-latest
     needs: unit-tests
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0   # 🔥 essentiel pour Chromatic
 
-      - name: Install Bun
-        uses: oven-sh/setup-bun@v1
+      - uses: oven-sh/setup-bun@v1
 
-      - name: Cache Bun dependencies
-        uses: actions/cache@v4
+      - uses: actions/cache@v4
         with:
           path: |
             ~/.bun/install/cache
@@ -65,7 +66,6 @@ jobs:
         run: bun run test-visual
 
 
-
   storybook-deploy:
     runs-on: ubuntu-latest
     needs: chromatic
@@ -75,25 +75,9 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Detect changed UI files
-        id: changes
-        run: |
-          DEFAULT_BRANCH=$(git remote show origin | sed -n "/HEAD branch/s/.*: //p")
-          git fetch origin $DEFAULT_BRANCH --depth=2
-          CHANGED=$(git diff --name-only origin/$DEFAULT_BRANCH...HEAD | grep -E '^src/|^packages/|\.stories\.|\.mdx$' || true)
-          echo "changed_files=$CHANGED" >> $GITHUB_OUTPUT
+      - uses: oven-sh/setup-bun@v1
 
-      - name: Skip Storybook deploy (no UI change)
-        if: ${{ steps.changes.outputs.changed_files == '' }}
-        run: echo "No UI changes — skipping Storybook deploy."
-
-      - name: Install Bun
-        if: ${{ steps.changes.outputs.changed_files != '' }}
-        uses: oven-sh/setup-bun@v1
-
-      - name: Cache Bun dependencies
-        if: ${{ steps.changes.outputs.changed_files != '' }}
-        uses: actions/cache@v4
+      - uses: actions/cache@v4
         with:
           path: |
             ~/.bun/install/cache
@@ -103,15 +87,12 @@ jobs:
             ${{ runner.os }}-bun-
 
       - name: Install dependencies
-        if: ${{ steps.changes.outputs.changed_files != '' }}
         run: bun install --ignore-scripts
 
       - name: Build Storybook
-        if: ${{ steps.changes.outputs.changed_files != '' }}
         run: bun run build-storybook
 
       - name: Deploy Storybook to GitHub Pages
-        if: ${{ steps.changes.outputs.changed_files != '' }}
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
