--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,46 +29,14 @@ jobs:
       - name: Install dependencies
         run: bun install --ignore-scripts
 
-      - name: Build
-        run: bun run build
-
       - name: Run unit tests
         run: bun run test
 
 
-  chromatic:
+  build-storybook:
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     needs: unit-tests
-
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0   # 🔥 essentiel pour Chromatic
-
-      - uses: oven-sh/setup-bun@v1
-
-      - uses: actions/cache@v4
-        with:
-          path: |
-            ~/.bun/install/cache
-            node_modules
-          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-bun-
-
-      - name: Install dependencies
-        run: bun install --ignore-scripts
-
-      - name: Build for Chromatic
-        run: bun run build
-
-      - name: Run Chromatic
-        run: bun run test-visual
-
-
-  storybook-deploy:
-    runs-on: ubuntu-latest
-    needs: chromatic
 
     steps:
       - uses: actions/checkout@v4
@@ -89,8 +57,85 @@ jobs:
       - name: Install dependencies
         run: bun install --ignore-scripts
 
-      - name: Build Storybook
+      - name: Build Storybook (once)
         run: bun run build-storybook
+
+      - name: Upload Storybook artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: storybook-static
+          path: storybook-static
+          if-no-files-found: error
+
+
+  chromatic:
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    needs: build-storybook
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: oven-sh/setup-bun@v1
+
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.bun/install/cache
+            node_modules
+          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-bun-
+
+      - name: Install dependencies
+        run: bun install --ignore-scripts
+
+      - name: Download Storybook artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: storybook-static
+          path: storybook-static
+
+      - name: Run Chromatic
+        run: |
+          npx chromatic \
+            --project-token=${{ secrets.CHROMATIC_TOKEN }} \
+            --storybook-build-dir=storybook-static \
+            --exit-zero-on-changes \
+            --ci
+
+
+  storybook-deploy:
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    needs: build-storybook
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: oven-sh/setup-bun@v1
+
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.bun/install/cache
+            node_modules
+          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-bun-
+
+      - name: Install dependencies
+        run: bun install --ignore-scripts
+
+      - name: Download Storybook artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: storybook-static
+          path: storybook-static
 
       - name: Deploy Storybook to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
