--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Install dependencies
         run: bun install --ignore-scripts
 
-      - name: Build Storybook (once)
+      - name: Build Storybook
         run: bun run build-storybook
 
       - name: Upload Storybook artifact
@@ -66,46 +66,6 @@ jobs:
           name: storybook-static
           path: storybook-static
           if-no-files-found: error
-
-
-  chromatic:
-    if: github.event_name == 'pull_request'
-    runs-on: ubuntu-latest
-    needs: build-storybook
-
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - uses: oven-sh/setup-bun@v1
-
-      - uses: actions/cache@v4
-        with:
-          path: |
-            ~/.bun/install/cache
-            node_modules
-          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-bun-
-
-      - name: Install dependencies
-        run: bun install --ignore-scripts
-
-      - name: Download Storybook artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: storybook-static
-          path: storybook-static
-
-      - name: Run Chromatic
-        run: |
-          npx chromatic \
-            --project-token=c9bbc986d0d6 \
-            --storybook-build-dir=storybook-static \
-            --exit-zero-on-changes \
-            --ci
-
 
   storybook-deploy:
     if: github.event_name == 'pull_request'
@@ -125,8 +85,6 @@ jobs:
             ~/.bun/install/cache
             node_modules
           key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-bun-
 
       - name: Install dependencies
         run: bun install --ignore-scripts
